[package]
name = "avif-ub"
version = "0.0.0"
authors = ["astral4"]
edition = "2021"
description = "Reproduction of AVIF image encoder UB"
readme = "README.md"
repository = "https://github.com/astral4/avif-ub"
license = "MIT OR Apache-2.0"

[dependencies]
avif-serialize = "0.8.1"
imgref = { version = "1.10.0", default-features = false }
rav1e = { version = "0.7.1", default-features = false }
rgb = "0.8.37"

[profile.release]
panic = "abort"
lto = true
