[package]
name = "avif-ub"
version = "0.0.0"
authors = ["astral4"]
edition = "2021"
description = "Reproduction of UB in rav1e"
readme = "README.md"
repository = "https://github.com/astral4/avif-ub"
license = "MIT OR Apache-2.0"

[dependencies]
rav1e = { version = "0.7.1", default-features = false }
